Modifica Requisiti Funzionali, sistemazione test e modifica codice